--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/camera": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.24.0",
+    "@ionic-native/file-transfer": "^5.25.0",
     "@ionic-native/image-picker": "^5.24.0",
     "@ionic-native/media": "^5.24.0",
     "@ionic-native/media-capture": "^5.24.0",
@@ -36,6 +37,7 @@
     "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-media-capture": "^3.0.3",
     "cordova-plugin-streaming-media": "^2.2.0",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
@@ -82,7 +84,9 @@
       "cordova-plugin-streaming-media": {},
       "com-sarriaroman-photoviewer": {},
       "cordova-plugin-telerik-imagepicker": {},
-      "cordova-android-support-gradle-release": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -93,7 +97,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android"
